Fix script loading

--- a/src/index.html
+++ b/src/index.html
@@ -31,14 +31,13 @@
 
     <footer class="footer">
         <div class="infooter">
-            <a class="fork-me" href="https://github.com/Sherevv/footwork-generator" target="_blank"></a>
+            <a class="fork-me" href="https://github.com/Sherevv/footwork-generator" target="_blank" title="Fork me!"></a>
             <it-socbtns></it-socbtns>
             <p>Copyright &copy; 2015-2017 Footwork Generator - Designed by <a href="http://it4t.ru/"
                                                                               target="_blank">it4t.ru</a></p>
         </div>
     </footer>
 </div>
-<script src="https://yastatic.net/share2/share.js"></script>
-
+<script async="async" src="https://yastatic.net/share2/share.js"></script>
 </body>
 </html>
