Add prerender feature

--- a/src/index.html
+++ b/src/index.html
@@ -11,24 +11,8 @@
 </head>
 
 <body>
+<div id="app-main"></div>
 
-<div id="app-main">
-    <it-navbar></it-navbar>
-
-    <main class="container">
-        <div class="container-main">
-            <div class="middle">
-                <router-view>loading...</router-view>
-            </div>
-        </div>
-    </main>
-
-    <footer class="footer">
-        <div class="infooter">
-            ${require('./partials/infooter.html')}
-        </div>
-    </footer>
-</div>
 ${require('./partials/counters.html')}
 </body>
 </html>
