--- a/src/index.html
+++ b/src/index.html
@@ -11,7 +11,7 @@
 </head>
 
 <body>
-<div id="app-main"></div>
+<div id="app-main">Loading..</div>
 
 ${require('./partials/counters.html')}
 </body>
